# bricked

./: README.md  bricked.cabal  shell.nix
example/: Main.hs
example/Data/List/: Zipper.hs
src/Brick/Widgets/: StructuralEditor.hs
src/Bricked/: Expr.hs
