cabal-version:           2.0
name:                    bricked
version:                 0.1.0.0
author:                  Lars Jellema
maintainer:              bricked@u16.nl
build-type:              Simple

library
  hs-source-dirs:        src
  default-language:      Haskell2010

  build-depends:
      base
    , aeson
    , brick
    , containers
    , data-fix
    , text
    , vector

  default-extensions:
    ImportQualifiedPost

  other-extensions:
    OverloadedStrings

executable example
  hs-source-dirs:        example
  main-is:               Main.hs
  ghc-options:           -threaded
  default-language:      Haskell2010

  other-modules:
    Data.List.Zipper

  build-depends:
      aeson
    , base
    , brick
    , bytestring
    , cursor
    , directory
    , text
    , text-zipper
    , time
    , vty

  default-extensions:
    ImportQualifiedPost
    BlockArguments

executable counter
  hs-source-dirs:        counter
  main-is:               Main.hs
  ghc-options:           -threaded
  default-language:      Haskell2010

  build-depends:
      base
    , brick
    , bytestring
    , cursor
    , text
    , time
    , vty

  default-extensions:
    ImportQualifiedPost
    BlockArguments
