cabal-version:           2.0
name:                    bricked
version:                 0.1.0.0
author:                  Lars Jellema
maintainer:              bricked@u16.nl
build-type:              Simple

library
  hs-source-dirs:        src
  default-language:      GHC2021

  build-depends:
      base
    , aeson
    , brick
    , containers
    , data-fix
    , mtl
    , text
    , transformers
    , vector
    , vty

  exposed-modules:
    Bricked.Expr

  default-extensions:
    BlockArguments
    DataKinds
    ImportQualifiedPost
    LambdaCase
    StrictData

  other-extensions:
    OverloadedStrings

executable example
  hs-source-dirs:        example
  main-is:               Main.hs
  ghc-options:           -threaded
  default-language:      GHC2021

  other-modules:
    Data.List.Zipper

  build-depends:
      aeson
    , base
    , brick
    , bytestring
    , cursor
    , directory
    , text
    , text-zipper
    , time
    , vty

  default-extensions:
    ImportQualifiedPost
    BlockArguments
    StrictData
